fix(i18n): english translation of settings of ftp server

--- a/src/lang/en/settings.json
+++ b/src/lang/en/settings.json
@@ -15,13 +15,13 @@
   "favicon": "Favicon",
   "filename_char_mapping": "Filename char mapping",
   "forward_direct_link_params": "Forward direct link params",
-  "ftp_implicit_tls": "Ftp implicit tls",
-  "ftp_mandatory_tls": "Ftp mandatory tls",
-  "ftp_pasv_port_map": "Ftp pasv port map",
-  "ftp_proxy_user_agent": "Ftp proxy user agent",
-  "ftp_public_host": "Ftp public host",
-  "ftp_tls_private_key_path": "Ftp tls private key path",
-  "ftp_tls_public_cert_path": "Ftp tls public cert path",
+  "ftp_implicit_tls": "Implicit TLS (ftps://)",
+  "ftp_mandatory_tls": "Mandatory TLS (ftpes://)",
+  "ftp_pasv_port_map": "Data port mapping in passive mode",
+  "ftp_proxy_user_agent": "Request User-Agent",
+  "ftp_public_host": "Public host",
+  "ftp_tls_private_key_path": "Path to TLS private key",
+  "ftp_tls_public_cert_path": "Path to TLS public certificate",
   "hide_files": "Hide files",
   "home_container": "Home container",
   "home_containers": {
