--- a/src/lang/en/settings_other.json
+++ b/src/lang/en/settings_other.json
@@ -17,6 +17,6 @@
   "thunder": "Thunder",
   "set_thunder": "Set Thunder",
   "thunder_browser": "ThunderBrowser",
-  "set_thunder_browser": "Set ThunderBrowser"
+  "set_thunder_browser": "Set ThunderBrowser",
   "set_thunderX": "Set ThunderX"
 }
